OG meta head vue

--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!doctype html>
-<html prefix="og: http://ogp.me/ns#" lang="en">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Natural Sweetness For the Future</title>
-    <meta property="og:title" content="Natural Sweetness For the Future" />
-    <meta property="og:description" content="The finest natural quality in every grain of palm sugar" />
-    <meta property="og:image" content="https://gula-aren-semut.vercel.app/assets/img/why-us.jpeg" />
-    <meta property="og:url" content="https://gula-aren-semut.vercel.app" />
   </head>
   <body>
     <div id="app"></div>
